--- a/Navbar/css/navbar.css
+++ b/Navbar/css/navbar.css
@@ -96,6 +96,24 @@
     background-color: #f2f2f2;
 }
 
+.backend-link {
+    height: 100%;
+}
+
+.backend-link:hover .backend-link-container {
+    background-color: #f5f5f5;
+}
+
+.backend-link-container {
+    transition: .3s ease;
+    height: 100%;
+    margin: auto;
+}
+
+.backend-link-text {
+    color: white;
+}
+
 #user-avatar-div {
 	margin: 0 0.5rem 0 0;
     overflow-x: hidden;
