--- a/Static/css/bulma/bulma.css
+++ b/Static/css/bulma/bulma.css
@@ -7213,7 +7213,7 @@ a.navbar-link.is-active {
     display: flex;
   }
   .navbar-menu {
-    background-color: white;
+    /* background-color: white; */
     -webkit-box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
             box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
     padding: 0.5rem 0;
